--- a/README
+++ b/README
@@ -10,4 +10,4 @@ https://en.wikipedia.org/wiki/Hash_oil
 
 https://nl.wikipedia.org/wiki/Koninkrijk_der_Nederlanden
 
-2002-2022
+nederland ® 2002-2022
